// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBox applies its default props 1`] = `
<form
  action=""
  className="form false"
  noValidate={true}
  onReset={[Function]}
  onSubmit={[Function]}
  role="search"
>
  <input
    autoCapitalize="off"
    autoComplete="off"
    autoCorrect="off"
    autoFocus={false}
    className="input"
    maxLength="512"
    onChange={[Function]}
    placeholder="Search here…"
    required={true}
    spellCheck="false"
    type="search"
    value=""
  />
  <button
    className="submit"
    hidden={false}
    title="Submit your search query."
    type="submit"
  >
    <svg
      className="submitIcon"
      height="10"
      viewBox="0 0 40 40"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M26.804 29.01c-2.832 2.34-6.465 3.746-10.426 3.746C7.333 32.756 0 25.424 0 16.378 0 7.333 7.333 0 16.378 0c9.046 0 16.378 7.333 16.378 16.378 0 3.96-1.406 7.594-3.746 10.426l10.534 10.534c.607.607.61 1.59-.004 2.202-.61.61-1.597.61-2.202.004L26.804 29.01zm-10.426.627c7.323 0 13.26-5.936 13.26-13.26 0-7.32-5.937-13.257-13.26-13.257C9.056 3.12 3.12 9.056 3.12 16.378c0 7.323 5.936 13.26 13.258 13.26z"
      />
    </svg>
  </button>
  <button
    className="reset"
    onClick={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    title="Clear the search query."
    type="reset"
  >
    <svg
      className="resetIcon"
      height="10"
      viewBox="0 0 20 20"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8.114 10L.944 2.83 0 1.885 1.886 0l.943.943L10 8.113l7.17-7.17.944-.943L20 1.886l-.943.943-7.17 7.17 7.17 7.17.943.944L18.114 20l-.943-.943-7.17-7.17-7.17 7.17-.944.943L0 18.114l.943-.943L8.113 10z"
      />
    </svg>
  </button>
</form>
`;

exports[`SearchBox lets you customize its theme 1`] = `
<form
  action=""
  className="form false"
  noValidate={true}
  onReset={[Function]}
  onSubmit={[Function]}
  role="search"
>
  <input
    autoCapitalize="off"
    autoComplete="off"
    autoCorrect="off"
    autoFocus={false}
    className="input"
    maxLength="512"
    onChange={[Function]}
    placeholder="Search here…"
    required={true}
    spellCheck="false"
    type="search"
    value=""
  />
  <button
    className="submit"
    hidden={false}
    title="Submit your search query."
    type="submit"
  >
    <svg
      className="submitIcon"
      height="10"
      viewBox="0 0 40 40"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M26.804 29.01c-2.832 2.34-6.465 3.746-10.426 3.746C7.333 32.756 0 25.424 0 16.378 0 7.333 7.333 0 16.378 0c9.046 0 16.378 7.333 16.378 16.378 0 3.96-1.406 7.594-3.746 10.426l10.534 10.534c.607.607.61 1.59-.004 2.202-.61.61-1.597.61-2.202.004L26.804 29.01zm-10.426.627c7.323 0 13.26-5.936 13.26-13.26 0-7.32-5.937-13.257-13.26-13.257C9.056 3.12 3.12 9.056 3.12 16.378c0 7.323 5.936 13.26 13.258 13.26z"
      />
    </svg>
  </button>
  <button
    className="reset"
    onClick={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    title="Clear the search query."
    type="reset"
  >
    <svg
      className="resetIcon"
      height="10"
      viewBox="0 0 20 20"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8.114 10L.944 2.83 0 1.885 1.886 0l.943.943L10 8.113l7.17-7.17.944-.943L20 1.886l-.943.943-7.17 7.17 7.17 7.17.943.944L18.114 20l-.943-.943-7.17-7.17-7.17 7.17-.944.943L0 18.114l.943-.943L8.113 10z"
      />
    </svg>
  </button>
</form>
`;

exports[`SearchBox lets you customize its translations 1`] = `
<form
  action=""
  className="form false"
  noValidate={true}
  onReset={[Function]}
  onSubmit={[Function]}
  role="search"
>
  <input
    autoCapitalize="off"
    autoComplete="off"
    autoCorrect="off"
    autoFocus={false}
    className="input"
    maxLength="512"
    onChange={[Function]}
    placeholder="PLACEHOLDER"
    required={true}
    spellCheck="false"
    type="search"
    value=""
  />
  <button
    className="submit"
    hidden={false}
    title="Submit your search query."
    type="submit"
  >
    <svg
      className="submitIcon"
      height="10"
      viewBox="0 0 40 40"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M26.804 29.01c-2.832 2.34-6.465 3.746-10.426 3.746C7.333 32.756 0 25.424 0 16.378 0 7.333 7.333 0 16.378 0c9.046 0 16.378 7.333 16.378 16.378 0 3.96-1.406 7.594-3.746 10.426l10.534 10.534c.607.607.61 1.59-.004 2.202-.61.61-1.597.61-2.202.004L26.804 29.01zm-10.426.627c7.323 0 13.26-5.936 13.26-13.26 0-7.32-5.937-13.257-13.26-13.257C9.056 3.12 3.12 9.056 3.12 16.378c0 7.323 5.936 13.26 13.258 13.26z"
      />
    </svg>
  </button>
  <button
    className="reset"
    onClick={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    title="RESET_TITLE"
    type="reset"
  >
    <svg
      className="resetIcon"
      height="10"
      viewBox="0 0 20 20"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8.114 10L.944 2.83 0 1.885 1.886 0l.943.943L10 8.113l7.17-7.17.944-.943L20 1.886l-.943.943-7.17 7.17 7.17 7.17.943.944L18.114 20l-.943-.943-7.17-7.17-7.17 7.17-.944.943L0 18.114l.943-.943L8.113 10z"
      />
    </svg>
  </button>
</form>
`;

exports[`SearchBox lets you give custom components for reset and submit 1`] = `
<form
  action=""
  className="form false"
  noValidate={true}
  onReset={[Function]}
  onSubmit={[Function]}
  role="search"
>
  <input
    autoCapitalize="off"
    autoComplete="off"
    autoCorrect="off"
    autoFocus={false}
    className="input"
    maxLength="512"
    onChange={[Function]}
    placeholder="Search here…"
    required={true}
    spellCheck="false"
    type="search"
    value=""
  />
  <button
    className="submit"
    hidden={false}
    title="Submit your search query."
    type="submit"
  >
    <svg
      className="submitIcon"
      height="10"
      viewBox="0 0 40 40"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M26.804 29.01c-2.832 2.34-6.465 3.746-10.426 3.746C7.333 32.756 0 25.424 0 16.378 0 7.333 7.333 0 16.378 0c9.046 0 16.378 7.333 16.378 16.378 0 3.96-1.406 7.594-3.746 10.426l10.534 10.534c.607.607.61 1.59-.004 2.202-.61.61-1.597.61-2.202.004L26.804 29.01zm-10.426.627c7.323 0 13.26-5.936 13.26-13.26 0-7.32-5.937-13.257-13.26-13.257C9.056 3.12 3.12 9.056 3.12 16.378c0 7.323 5.936 13.26 13.258 13.26z"
      />
    </svg>
  </button>
  <button
    className="reset"
    onClick={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    title="Clear the search query."
    type="reset"
  >
    <svg
      className="resetIcon"
      height="10"
      viewBox="0 0 20 20"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8.114 10L.944 2.83 0 1.885 1.886 0l.943.943L10 8.113l7.17-7.17.944-.943L20 1.886l-.943.943-7.17 7.17 7.17 7.17.943.944L18.114 20l-.943-.943-7.17-7.17-7.17 7.17-.944.943L0 18.114l.943-.943L8.113 10z"
      />
    </svg>
  </button>
</form>
`;

exports[`SearchBox should render the loader if showLoadingIndicator is true 1`] = `
<form
  action=""
  className="form false"
  noValidate={true}
  onReset={[Function]}
  onSubmit={[Function]}
  role="search"
>
  <input
    autoCapitalize="off"
    autoComplete="off"
    autoCorrect="off"
    autoFocus={false}
    className="input"
    maxLength="512"
    onChange={[Function]}
    placeholder="Search here…"
    required={true}
    spellCheck="false"
    type="search"
    value=""
  />
  <div
    className="loadingIndicator"
    hidden={true}
    style={
      Object {
        "display": "none",
      }
    }
  >
    <svg
      className="loadingIcon"
      height="18"
      stroke="#BFC7D8"
      viewBox="0 0 38 38"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <g
          strokeWidth="2"
          transform="translate(1 1)"
        >
          <circle
            cx="18"
            cy="18"
            r="18"
            strokeOpacity=".5"
          />
          <path
            d="M36 18c0-9.94-8.06-18-18-18"
          >
            <animateTransform
              attributeName="transform"
              dur="1s"
              from="0 18 18"
              repeatCount="indefinite"
              to="360 18 18"
              type="rotate"
            />
          </path>
        </g>
      </g>
    </svg>
  </div>
  <button
    className="submit"
    hidden={false}
    title="Submit your search query."
    type="submit"
  >
    <svg
      className="submitIcon"
      height="10"
      viewBox="0 0 40 40"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M26.804 29.01c-2.832 2.34-6.465 3.746-10.426 3.746C7.333 32.756 0 25.424 0 16.378 0 7.333 7.333 0 16.378 0c9.046 0 16.378 7.333 16.378 16.378 0 3.96-1.406 7.594-3.746 10.426l10.534 10.534c.607.607.61 1.59-.004 2.202-.61.61-1.597.61-2.202.004L26.804 29.01zm-10.426.627c7.323 0 13.26-5.936 13.26-13.26 0-7.32-5.937-13.257-13.26-13.257C9.056 3.12 3.12 9.056 3.12 16.378c0 7.323 5.936 13.26 13.258 13.26z"
      />
    </svg>
  </button>
  <button
    className="reset"
    onClick={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    title="Clear the search query."
    type="reset"
  >
    <svg
      className="resetIcon"
      height="10"
      viewBox="0 0 20 20"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8.114 10L.944 2.83 0 1.885 1.886 0l.943.943L10 8.113l7.17-7.17.944-.943L20 1.886l-.943.943-7.17 7.17 7.17 7.17.943.944L18.114 20l-.943-.943-7.17-7.17-7.17 7.17-.944.943L0 18.114l.943-.943L8.113 10z"
      />
    </svg>
  </button>
</form>
`;

exports[`SearchBox should render the loader if showLoadingIndicator is true 2`] = `
<form
  action=""
  className="form form--stalledSearch"
  noValidate={true}
  onReset={[Function]}
  onSubmit={[Function]}
  role="search"
>
  <input
    autoCapitalize="off"
    autoComplete="off"
    autoCorrect="off"
    autoFocus={false}
    className="input"
    maxLength="512"
    onChange={[Function]}
    placeholder="Search here…"
    required={true}
    spellCheck="false"
    type="search"
    value=""
  />
  <div
    className="loadingIndicator"
    hidden={false}
    style={
      Object {
        "display": "block",
      }
    }
  >
    <svg
      className="loadingIcon"
      height="18"
      stroke="#BFC7D8"
      viewBox="0 0 38 38"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <g
          strokeWidth="2"
          transform="translate(1 1)"
        >
          <circle
            cx="18"
            cy="18"
            r="18"
            strokeOpacity=".5"
          />
          <path
            d="M36 18c0-9.94-8.06-18-18-18"
          >
            <animateTransform
              attributeName="transform"
              dur="1s"
              from="0 18 18"
              repeatCount="indefinite"
              to="360 18 18"
              type="rotate"
            />
          </path>
        </g>
      </g>
    </svg>
  </div>
  <button
    className="submit"
    hidden={true}
    title="Submit your search query."
    type="submit"
  >
    <svg
      className="submitIcon"
      height="10"
      viewBox="0 0 40 40"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M26.804 29.01c-2.832 2.34-6.465 3.746-10.426 3.746C7.333 32.756 0 25.424 0 16.378 0 7.333 7.333 0 16.378 0c9.046 0 16.378 7.333 16.378 16.378 0 3.96-1.406 7.594-3.746 10.426l10.534 10.534c.607.607.61 1.59-.004 2.202-.61.61-1.597.61-2.202.004L26.804 29.01zm-10.426.627c7.323 0 13.26-5.936 13.26-13.26 0-7.32-5.937-13.257-13.26-13.257C9.056 3.12 3.12 9.056 3.12 16.378c0 7.323 5.936 13.26 13.258 13.26z"
      />
    </svg>
  </button>
  <button
    className="reset"
    onClick={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    title="Clear the search query."
    type="reset"
  >
    <svg
      className="resetIcon"
      height="10"
      viewBox="0 0 20 20"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8.114 10L.944 2.83 0 1.885 1.886 0l.943.943L10 8.113l7.17-7.17.944-.943L20 1.886l-.943.943-7.17 7.17 7.17 7.17.943.944L18.114 20l-.943-.943-7.17-7.17-7.17 7.17-.944.943L0 18.114l.943-.943L8.113 10z"
      />
    </svg>
  </button>
</form>
`;

exports[`SearchBox transfers the autoFocus prop to the underlying input element 1`] = `
<form
  action=""
  className="form false"
  noValidate={true}
  onReset={[Function]}
  onSubmit={[Function]}
  role="search"
>
  <input
    autoCapitalize="off"
    autoComplete="off"
    autoCorrect="off"
    autoFocus={true}
    className="input"
    maxLength="512"
    onChange={[Function]}
    placeholder="Search here…"
    required={true}
    spellCheck="false"
    type="search"
    value=""
  />
  <button
    className="submit"
    hidden={false}
    title="Submit your search query."
    type="submit"
  >
    <svg
      className="submitIcon"
      height="10"
      viewBox="0 0 40 40"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M26.804 29.01c-2.832 2.34-6.465 3.746-10.426 3.746C7.333 32.756 0 25.424 0 16.378 0 7.333 7.333 0 16.378 0c9.046 0 16.378 7.333 16.378 16.378 0 3.96-1.406 7.594-3.746 10.426l10.534 10.534c.607.607.61 1.59-.004 2.202-.61.61-1.597.61-2.202.004L26.804 29.01zm-10.426.627c7.323 0 13.26-5.936 13.26-13.26 0-7.32-5.937-13.257-13.26-13.257C9.056 3.12 3.12 9.056 3.12 16.378c0 7.323 5.936 13.26 13.258 13.26z"
      />
    </svg>
  </button>
  <button
    className="reset"
    onClick={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    title="Clear the search query."
    type="reset"
  >
    <svg
      className="resetIcon"
      height="10"
      viewBox="0 0 20 20"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8.114 10L.944 2.83 0 1.885 1.886 0l.943.943L10 8.113l7.17-7.17.944-.943L20 1.886l-.943.943-7.17 7.17 7.17 7.17.943.944L18.114 20l-.943-.943-7.17-7.17-7.17 7.17-.944.943L0 18.114l.943-.943L8.113 10z"
      />
    </svg>
  </button>
</form>
`;

exports[`SearchBox treats its query prop as its input value 1`] = `
<form
  action=""
  className="form false"
  noValidate={true}
  onReset={[Function]}
  onSubmit={[Function]}
  role="search"
>
  <input
    autoCapitalize="off"
    autoComplete="off"
    autoCorrect="off"
    autoFocus={false}
    className="input"
    maxLength="512"
    onChange={[Function]}
    placeholder="Search here…"
    required={true}
    spellCheck="false"
    type="search"
    value="QUERY1"
  />
  <button
    className="submit"
    hidden={false}
    title="Submit your search query."
    type="submit"
  >
    <svg
      className="submitIcon"
      height="10"
      viewBox="0 0 40 40"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M26.804 29.01c-2.832 2.34-6.465 3.746-10.426 3.746C7.333 32.756 0 25.424 0 16.378 0 7.333 7.333 0 16.378 0c9.046 0 16.378 7.333 16.378 16.378 0 3.96-1.406 7.594-3.746 10.426l10.534 10.534c.607.607.61 1.59-.004 2.202-.61.61-1.597.61-2.202.004L26.804 29.01zm-10.426.627c7.323 0 13.26-5.936 13.26-13.26 0-7.32-5.937-13.257-13.26-13.257C9.056 3.12 3.12 9.056 3.12 16.378c0 7.323 5.936 13.26 13.258 13.26z"
      />
    </svg>
  </button>
  <button
    className="reset"
    onClick={[Function]}
    style={
      Object {
        "display": "block",
      }
    }
    title="Clear the search query."
    type="reset"
  >
    <svg
      className="resetIcon"
      height="10"
      viewBox="0 0 20 20"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8.114 10L.944 2.83 0 1.885 1.886 0l.943.943L10 8.113l7.17-7.17.944-.943L20 1.886l-.943.943-7.17 7.17 7.17 7.17.943.944L18.114 20l-.943-.943-7.17-7.17-7.17 7.17-.944.943L0 18.114l.943-.943L8.113 10z"
      />
    </svg>
  </button>
</form>
`;

exports[`SearchBox treats its query prop as its input value 2`] = `
<form
  action=""
  className="form false"
  noValidate={true}
  onReset={[Function]}
  onSubmit={[Function]}
  role="search"
>
  <input
    autoCapitalize="off"
    autoComplete="off"
    autoCorrect="off"
    autoFocus={false}
    className="input"
    maxLength="512"
    onChange={[Function]}
    placeholder="Search here…"
    required={true}
    spellCheck="false"
    type="search"
    value="QUERY2"
  />
  <button
    className="submit"
    hidden={false}
    title="Submit your search query."
    type="submit"
  >
    <svg
      className="submitIcon"
      height="10"
      viewBox="0 0 40 40"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M26.804 29.01c-2.832 2.34-6.465 3.746-10.426 3.746C7.333 32.756 0 25.424 0 16.378 0 7.333 7.333 0 16.378 0c9.046 0 16.378 7.333 16.378 16.378 0 3.96-1.406 7.594-3.746 10.426l10.534 10.534c.607.607.61 1.59-.004 2.202-.61.61-1.597.61-2.202.004L26.804 29.01zm-10.426.627c7.323 0 13.26-5.936 13.26-13.26 0-7.32-5.937-13.257-13.26-13.257C9.056 3.12 3.12 9.056 3.12 16.378c0 7.323 5.936 13.26 13.258 13.26z"
      />
    </svg>
  </button>
  <button
    className="reset"
    onClick={[Function]}
    style={
      Object {
        "display": "block",
      }
    }
    title="Clear the search query."
    type="reset"
  >
    <svg
      className="resetIcon"
      height="10"
      viewBox="0 0 20 20"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8.114 10L.944 2.83 0 1.885 1.886 0l.943.943L10 8.113l7.17-7.17.944-.943L20 1.886l-.943.943-7.17 7.17 7.17 7.17.943.944L18.114 20l-.943-.943-7.17-7.17-7.17 7.17-.944.943L0 18.114l.943-.943L8.113 10z"
      />
    </svg>
  </button>
</form>
`;
